<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.farmwise.Weather">
    <item
        android:id="@+id/home"
        android:orderInCategory="1"
        android:title="@string/home"
        app:showAsAction="never" />
    <item
        android:id="@+id/Weather"
        android:orderInCategory="2"
        android:title="@string/weather_analysis"
        app:showAsAction="never" />
    <item
        android:id="@+id/Schemes"
        android:orderInCategory="3"
        android:title="@string/schemes"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/logout"
        app:showAsAction="never" />
</menu>