<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#EFFAE6"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="330dp"
            android:layout_gravity="top"
            android:background="@drawable/up"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutinput2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/layoutround"
        android:padding="20dp"
        android:elevation="16dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="200dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="false">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="AUTHENTICATION"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold"
            android:gravity="center"/>

            <EditText
                android:id="@+id/ed1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/user_name"
                android:textSize="20dp"
                android:background="@drawable/round"
                android:layout_marginTop="20dp"
                android:inputType="textPersonName"
                android:paddingLeft="20dp"
                android:paddingRight="10dp"
                android:drawableRight="@drawable/person_black"/>

            <EditText
                android:id="@+id/ed2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/password"
                android:textSize="20dp"
                android:background="@drawable/round"
                android:layout_marginTop="20dp"
                android:inputType="textPassword"
                android:paddingLeft="20dp"
                android:paddingRight="10dp"
                android:drawableRight="@drawable/password_key"/>

        <Button
            android:id="@+id/btnlogin"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:text="@string/login"
            android:textAllCaps="true"
            android:elevation="16dp"
            android:layout_margin="20dp"
            android:textColor="#FFFF"
            android:textSize="20dp"/>


        <Button
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="-10dp"
            android:elevation="16dp"
            android:onClick="reg"
            android:text="@string/new_user_register_here"
            android:textAllCaps="false"
            android:textColor="#FFFF"
            android:textSize="15dp" />
        <Button
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="-10dp"
            android:elevation="16dp"
            android:onClick="Language"
            android:text="@string/change_language"
            android:textAllCaps="false"
            android:textColor="#FFFF"
            android:textSize="15dp" />

    </LinearLayout>

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="40dp"
        android:background="@drawable/login"/>

</RelativeLayout>