<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pred"
    tools:context=".Image">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/please_select_the_soil_image"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="#000000"
            android:layout_marginStart="20dp"/>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="370sp"
            android:layout_height="370sp"
            android:layout_marginTop="10sp"
            android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:orientation="horizontal"
            android:gravity="center_horizontal">
            <ScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <Button
                android:id="@+id/button_gallery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_from_gallery" /></ScrollView>

            <View
                android:layout_width="8dp"
                android:layout_height="0dp" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/camera"
                android:textAllCaps="false" />

        </LinearLayout>

        <TextView
            android:id="@+id/classified"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text=""
            android:textColor="#C30000"
            android:textStyle="bold"
            android:textSize="27sp" />

        <TextView
            android:id="@+id/confidencesText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/confidence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text=""
            android:textColor="#000"
            android:textSize="22sp" />

    </LinearLayout>
</ScrollView>